--- a/.github/workflows/master_masverdemenosagua.yml
+++ b/.github/workflows/master_masverdemenosagua.yml
@@ -16,16 +16,16 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Setup MSBuild path
-      uses: microsoft/setup-msbuild@v1.0.0
+      # uses: microsoft/setup-msbuild@v1.0.0
 
     - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.2
+      # uses: NuGet/setup-nuget@v1.0.2
 
     - name: Restore NuGet packages
-      run: nuget restore
+      # run: nuget restore
 
     - name: Publish to folder
-      run: msbuild /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=./published/ /p:PackageAsSingleFile=false
+      # run: msbuild /p:Configuration=Release /p:DeployOnBuild=true /t:WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl=./published/ /p:PackageAsSingleFile=false
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -33,4 +33,4 @@ jobs:
         app-name: 'masverdemenosagua'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_62f421e55a36455bbe7293a986759ade }}
-        package: ./published/
+        package: ./
